<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/background_light"
        android:elevation="0dp"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:popupTheme="?android:attr/homeAsUpIndicator"/>

    <android.support.v4.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/product_sheet_scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/product_sheet_essential_relativelayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp">

                <LinearLayout
                    android:id="@+id/product_sheet_viewpager_linearlayout"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:orientation="vertical"
                    android:paddingBottom="20dp">

                    <android.support.v4.view.ViewPager
                        android:id="@+id/product_sheet_images_viewpager"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>

                </LinearLayout>

                <com.flyco.pageindicator.indicator.RoundCornerIndicaor
                    android:id="@+id/product_sheet_viewpager_indicator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/product_sheet_viewpager_linearlayout"
                    android:layout_centerHorizontal="true"
                    app:rci_unselectColor="@color/colorUnselectedIndicator"
                    app:rci_selectColor="@color/colorAccent"
                    />

                <TextView
                    android:id="@+id/product_sheet_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:typeface="sans"
                    android:textStyle="bold"
                    android:textAllCaps="true"
                    android:textColor="@color/colorBlack"
                    android:textSize="20dp"
                    android:paddingLeft="24dp"
                    android:paddingBottom="5dp"
                    android:layout_below="@id/product_sheet_viewpager_indicator"
                    android:text="19€99"/>

                <TextView
                    android:id="@+id/product_sheet_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/product_sheet_price"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:textSize="17dp"
                    android:text="Mini jupe short à fleur"/>

                <com.piotrek.customspinner.CustomSpinner
                    android:id="@+id/product_sheet_color_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/product_sheet_name"
                    android:layout_alignLeft="@id/product_sheet_name"
                    android:layout_centerHorizontal="true"
                    android:background="@color/colorTransparent"/>

                <com.piotrek.customspinner.CustomSpinner
                    android:id="@+id/product_sheet_size_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/product_sheet_name"
                    android:layout_alignRight="@id/product_sheet_viewpager_linearlayout"
                    android:layout_marginRight="24dp"
                    android:popupBackground="#DFFFFFFF"/>

            </RelativeLayout>

            <Button
                android:id="@+id/product_sheet_addtocart_button"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@id/product_sheet_essential_relativelayout"
                android:background="@color/colorAccent"
                android:textColor="@color/colorWhite"
                android:textStyle="bold"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:text="@string/add_basket_button"/>

            <View
                android:id="@+id/product_sheet_separator_1"
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:layout_below="@id/product_sheet_addtocart_button"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@color/colorSeparator"/>

            <TextView
                android:id="@+id/product_sheet_information"
                style="@style/ProductSheetClickableTextview"
                android:layout_below="@id/product_sheet_separator_1"
                android:text="@string/info_button"/>

            <TextView
                android:id="@+id/product_sheet_sizeguide"
                style="@style/ProductSheetClickableTextview"
                android:layout_below="@id/product_sheet_information"
                android:text="@string/size_guide_button"/>

            <TextView
                android:id="@+id/product_sheet_shipping_button"
                style="@style/ProductSheetClickableTextview"
                android:layout_below="@id/product_sheet_sizeguide"
                android:text="@string/shipping_button"/>

            <TextView
                android:id="@+id/product_sheet_returns_button"
                style="@style/ProductSheetClickableTextview"
                android:layout_below="@id/product_sheet_shipping_button"
                android:text="@string/returns_button"/>

            <TextView
                android:id="@+id/product_sheet_share_button"
                style="@style/ProductSheetClickableTextview"
                android:layout_below="@id/product_sheet_returns_button"
                android:paddingBottom="0dp"
                android:text="@string/share_button"/>

            <View
                android:id="@+id/product_sheet_separator_2"
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:layout_below="@id/product_sheet_share_button"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@color/colorSeparator"/>

            <TextView
                android:id="@+id/product_sheet_associated_product"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/product_sheet_separator_2"
                android:paddingLeft="24dp"
                android:textColor="@color/colorBlack"
                android:textStyle="bold"
                android:text="@string/see_also"/>

            <TextView
                android:id="@+id/product_sheet_associated_product_items_indicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/product_sheet_separator_2"
                android:layout_alignParentRight="true"
                android:paddingRight="24dp"
                android:textColor="@color/colorUnselectedIndicator"
                android:text="@string/items_indicator"/>

            <TextView
                android:id="@+id/product_sheet_associated_product_counter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/product_sheet_separator_2"
                android:layout_toLeftOf="@+id/product_sheet_associated_product_items_indicator"
                android:textColor="@color/colorUnselectedIndicator"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/product_sheet_associated_product_recycler_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/product_sheet_associated_product"
                android:orientation="horizontal"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:gravity="center_vertical"/>

        </RelativeLayout>

    </android.support.v4.widget.NestedScrollView>


</RelativeLayout>